syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_send_passcode.proto";

option go_package = "github.com/CodeSingerGnC/MicroBank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Micro Bank API";
        version: "1.2";
        contact: {
            name: "CodeSingerGnC";
            url: "https://github.com/CodeSingerGnC";
            email: "unknow@qq.com";
        };
    };
};

service MicroBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/user/create"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new user";
            summary: "Create new user";
        };
    };
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/user/login"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to login user and get access token & refresh token";
            summary: "Login user";
        };
    };
    rpc SendPassCode (SendPassCodeRequest) returns (SendPassCodeResponse) {
        option (google.api.http) = {
            post: "/v1/user/send_passcode"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to send passcode to user's email";
            summary: "Send passcode";
        };
    };
}